Corrected spelling mistake
